code/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /management-frontend(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: management-frontend-service
                port:
                  number: 80
          
          - path: /management-backend(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: management-backend-service
                port:
                  number: 9000
